Fixed for PMD warnings.